@@ -386,7 +386,7 @@ module.exports = function (Server) {
                 });
                 return;
             }
-            ActionLog.record(ip, info[0], "password-recover-success");
+            ActionLog.record(ip, auth.name, "password-recover-success");
             res.jsonp({
                 success: true,
                 name: auth.name,
