@@ -60,6 +60,7 @@
     <script src="./assets/js/bootstrap-modal.js"></script>
 
     <!-- Mine -->
+    <script src="./assets/js/data.js"></script>
     <script src="./assets/js/iourl.js"></script>
     <script type="text/javascript">
         var hash = false;
